adding additional page

--- a/index.html
+++ b/index.html
@@ -26,55 +26,55 @@
 
 		<div class="row">
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/people/1" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Ut rutrum vel neque semper</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/city/1" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Interdum et malesuada fames ac</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/technics/1" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Suspendisse potenti</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/abstract/1" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Donec tempus elementum</h5>
-				</div>
+				</a>
 			</div>							
 		</div>
 
 		<div class="row">
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/abstract/3" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Maecenas facilisis ante purus</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/people/2" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Nunc condimentum aliquet feugiat</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/technics/2" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Duis rhoncus varius ultricies</h5>
-				</div>
+				</a>
 			</div>
 			<div class="col-md-3">
-				<div class="thumbnail">
+				<a href="project.html" class="thumbnail">
 					<img src="http://lorempixel.com/g/520/280/city/2" alt="Lorem Pixel image" class="img">
 					<h5 class="project-title">Quisque imperdiet ultricies lorem</h5>
-				</div>
+				</a>
 			</div>							
 		</div>
 
@@ -90,6 +90,7 @@
 				<p><span class="glyphicon glyphicon-globe contact-icon"></span><a href="http://campus-map.stanford.edu/?id=&lat=37.43039741415547&lng=-122.173416156&zoom=17&srch=Gates%20Computer%20Science">Gates 308, 353 Serra Mall, Stanford CA</a></p>
 			</div>			
 		</div>
+	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
