projects in p tags

--- a/static/index-step1.html
+++ b/static/index-step1.html
@@ -29,35 +29,35 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<img src="http://lorempixel.com/g/520/280/people/1" alt="Lorem Pixel image">
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<a href="project.html">Waiting in line</a>
+		<p><a href="project.html">Waiting in line</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/city/1" alt="Lorem Pixel image">
-		<a href="project.html">Needfinding</a>
+		<p><a href="project.html">Needfinding</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/technics/1" alt="Lorem Pixel image">
-		<a href="project.html">Prototyping</a>
+		<p><a href="project.html">Prototyping</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/abstract/1" alt="Lorem Pixel image">
-		<a href="project.html">Heuristic Evaluation</a>
+		<p><a href="project.html">Heuristic Evaluation</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/abstract/3" alt="Lorem Pixel image">
-		<a href="project.html">Visualization</a>
+		<p><a href="project.html">Visualization</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/people/2" alt="Lorem Pixel image">
-		<a href="project.html">Social design</a>
+		<p><a href="project.html">Social design</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/technics/2" alt="Lorem Pixel image">
-		<a href="project.html">Gestural interaction</a>
+		<p><a href="project.html">Gestural interaction</a></p>
 	</div>
 	<div>
 		<img src="http://lorempixel.com/g/520/280/city/2" alt="Lorem Pixel image">
-		<a href="project.html">Design tools</a>
+		<p><a href="project.html">Design tools</a></p>
 	</div>
 </body>
 </html>
