jumbotron in div

--- a/static/index-step1.html
+++ b/static/index-step1.html
@@ -17,10 +17,12 @@
 </head>
 
 <body>
-	<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-	<h1>Michael Bernstein</h1>
-	<!-- p means paragraph -->
-	<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+	<div>
+		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
+		<h1>Michael Bernstein</h1>
+		<!-- p means paragraph -->
+		<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+	</div>
 
 
 	<h4>Projects</h4>
