renaming to final so we can start with v1

--- a/static/index-final.html
+++ b/static/index-final.html
@@ -80,7 +80,7 @@
 
 		<div class="row">
 			<div class="col-md-6 footer">
-				<p>B.S. in Computer Science, 2015, <span class="description">Xavier Institute for Higher Learning.</span></p>
+				<p>B.S. in Computer Science, 2015. <span class="description">Xavier Institute for Higher Learning.</span></p>
 				<p>Instagrem design intern, 2013. <span class="description">Redesigned composer interface to signal privacy.</span></p>
 				<p>G&uuml;gel product manager intern, 2012. <span class="description">G&uuml;gel Glass team.</span></p>
 			</div>
