--- a/static/index.html
+++ b/static/index.html
@@ -31,35 +31,35 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div>
-			<img src="http://lorempixel.com/g/520/280/people/1" alt="Lorem Pixel image">
+			<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Waiting in line</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/city/1" alt="Lorem Pixel image">
+			<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Needfinding</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/technics/1" alt="Lorem Pixel image">
+			<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Prototyping</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/abstract/1" alt="Lorem Pixel image">
+			<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Heuristic Evaluation</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/abstract/3" alt="Lorem Pixel image">
+			<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Visualization</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/people/2" alt="Lorem Pixel image">
+			<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Social design</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/technics/2" alt="Lorem Pixel image">
+			<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Gestural interaction</a></p>
 		</div>
 		<div>
-			<img src="http://lorempixel.com/g/520/280/city/2" alt="Lorem Pixel image">
+			<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
 			<p><a href="project.html">Design tools</a></p>
 		</div>
 	</div>
