fixing closed comment

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/introHCI.css" rel="stylesheet">
 
 	<!-- this is a comment in HTML -->
 
