fixing starter setup for lab 2

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,9 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">	
 	<link href="css/introHCI.css" rel="stylesheet">
 
 	<!-- this is a comment in HTML -->
@@ -31,38 +34,43 @@
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<div>
+		<a href="project.html">
 			<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Waiting in line</a></p>
-		</div>
-		<div>
+			<p>Waiting ine</a></p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Needfinding</a></p>
-		</div>
-		<div>
+			<p>Needfinding</p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Prototyping</a></p>
-		</div>
-		<div>
+			<p>Prototyping</p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Heuristic Evaluation</a></p>
-		</div>
-		<div>
+			<p>Heuristic Evaluatia></p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Visualization</a></p>
-		</div>
-		<div>
+			<p>Visualization</p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Social design</a></p>
-		</div>
-		<div>
+			<p>Social desia></p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Gestural interaction</a></p>
-		</div>
-		<div>
+			<p>Gestural interactia></p>
+		</a>
+		<a href="project.html">
 			<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-			<p><a href="project.html">Design tools</a></p>
-		</div>
+			<p>Design tooa></p>
+		</a>
 	</div>
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>		
 </body>
 </html>
