--- a/static/index-step3.html
+++ b/static/index-step3.html
@@ -8,7 +8,7 @@
 	<!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="css/introHCI-step3.css" rel="stylesheet">    
+	<link href="css/introHCI.css" rel="stylesheet">    
 
 	<!-- this is a comment in HTML -->
 
