--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,6 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">	
-	<link href="css/introHCI.css" rel="stylesheet">
 
 	<!-- this is a comment in HTML -->
 
@@ -34,43 +30,54 @@
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<a href="project.html">
-			<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-			<p>Waiting ine</a></p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
-			<p>Needfinding</p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
-			<p>Prototyping</p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
-			<p>Heuristic Evaluatia></p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
-			<p>Visualization</p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
-			<p>Social desia></p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
-			<p>Gestural interactia></p>
-		</a>
-		<a href="project.html">
-			<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
-			<p>Design tooa></p>
-		</a>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
+				<p>Waiting in Line</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
+				<p>Needfinding</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
+				<p>Prototyping</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
+				<p>Heuristic Evaluation</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
+				<p>Visualization</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
+				<p>Social design</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
+				<p>Gestural interaction</p>
+			</a>
+		</div>
+		<div>
+			<a href="project.html">
+				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
+				<p>Design tools</p>
+			</a>
+		</div>
 	</div>
-
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>		
 </body>
 </html>
