gives the body an outline and project divs an id

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
 	<title>HCI Project Portfolio</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!-- this is a comment in HTML -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -30,49 +29,49 @@
 		<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
-		<div>
+		<div id="project1">
 			<a href="project.html">
 				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
 				<p>Waiting in Line</p>
 			</a>
 		</div>
-		<div>
+		<div id="project2">
 			<a href="project.html">
 				<img src="images/lorempixel.city.1.jpeg" alt="Lorem Pixel image">
 				<p>Needfinding</p>
 			</a>
 		</div>
-		<div>
+		<div id="project3">
 			<a href="project.html">
 				<img src="images/lorempixel.technics.1.jpeg" alt="Lorem Pixel image">
 				<p>Prototyping</p>
 			</a>
 		</div>
-		<div>
+		<div id="project4">
 			<a href="project.html">
 				<img src="images/lorempixel.abstract.1.jpeg" alt="Lorem Pixel image">
 				<p>Heuristic Evaluation</p>
 			</a>
 		</div>
-		<div>
+		<div id="project5">
 			<a href="project.html">
 				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image">
 				<p>Visualization</p>
 			</a>
 		</div>
-		<div>
+		<div id="project6">
 			<a href="project.html">
 				<img src="images/lorempixel.people.2.jpeg" alt="Lorem Pixel image">
 				<p>Social design</p>
 			</a>
 		</div>
-		<div>
+		<div id="project7">
 			<a href="project.html">
 				<img src="images/lorempixel.technics.2.jpeg" alt="Lorem Pixel image">
 				<p>Gestural interaction</p>
 			</a>
 		</div>
-		<div>
+		<div id="project8">
 			<a href="project.html">
 				<img src="images/lorempixel.city.2.jpeg" alt="Lorem Pixel image">
 				<p>Design tools</p>
